tests/snapshots/runtime_error_fixtures/indirect_call_wrong_arity.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/indirect_call_wrong_arity.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 10] Compiling  Assert
[ 2 of 10] Compiling  Array
[ 3 of 10] Compiling  List
[ 4 of 10] Compiling  Either
[ 5 of 10] Compiling  IO
[ 6 of 10] Compiling  Math
[ 7 of 10] Compiling  Numeric
[ 8 of 10] Compiling  Option
[ 9 of 10] Compiling  String
[10 of 10] Compiling  indirect_call_wrong_arity
[cfg→vm] Running via CFG → bytecode VM backend...
• 1 error • examples/runtime_errors/indirect_call_wrong_arity.flx
error[E1000]: wrong number of arguments: want=2, got=1

  examples/runtime_errors/indirect_call_wrong_arity.flx:7:19
  |
7 |     let ignored = f(1)
  |                   ^^^^

Stack trace:
  at main (examples/runtime_errors/indirect_call_wrong_arity.flx:7:19)
  at <main>
